[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
    "xtask",
    "tests/testcases/src/uart",
]
default-members = ["xtask"]
exclude = ["zircon-user", "rboot"]

[profile.release]
lto = true
