[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
    "z-config",
    "xtask",
]
default-members = ["xtask"]
exclude = ["zircon-user", "rboot"]
resolver = "2"

[profile.release]
lto = true
debug = true

[workspace.dependencies]
log = "0.4"
riscv = "0.10.1"
executor = { git = "https://github.com/KaminariOS/PreemptiveScheduler", rev = "d558a02af5269dec0c4a9ac4197974577e02e165" }
hashbrown = "0.14.2"
bitflags = "2.4.1"
cfg-if = "1.0"
lazy_static = "1.4"
