[package]
name = "zcore-drivers"
version = "0.1.0"
authors = ["Yuekai Jia <equation618@gmail.com>"]
edition = "2018"
description = "Device drivers of zCore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphic = ["rcore-console"]
mock = ["async-std", "sdl2"]
virtio = ["virtio-drivers"]
loopback = []
no-pci = []

# special drivers for hardwares

allwinner = ["d1-pac"]
fu740 = []

[dependencies]
log.workspace = true
cfg-if.workspace = true
bitflags.workspace = true
lazy_static.workspace = true
numeric-enum-macro = "0.2"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2f2e55f" }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "88e871a5" }
pci = { git = "https://github.com/elliott10/pci-rs", rev = "8f33774b" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "2aaf7d6", optional = true }
rcore-console = { git = "https://github.com/rcore-os/rcore-console", default-features = false, rev = "ca5b1bc", optional = true }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers", rev = "f7cd97a8", features = [
    "log",
] }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", rev = "35e833e3", default-features = false, features = [
    "log",
    "alloc",
    "verbose",
    "proto-ipv4",
    "proto-ipv6",
    "proto-igmp",
    "medium-ip",
    "medium-ethernet",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "socket-icmp",
    "async",
] }
d1-pac = { version = "0.0.31", optional = true }
volatile = "0.3"

# LibOS mode
[target.'cfg(not(target_os = "none"))'.dependencies]
async-std = { version = "1.10", optional = true }
sdl2 = { version = "0.35", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
acpi = "5.0"
x2apic = "0.4"
x86_64 = "0.14"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv.workspace = true
