[package]
name = "kernel-hal-bare"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Kernel HAL implementation for bare metal environment."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.5"
git-version = "0.3"
executor = { git = "https://github.com/rcore-os/executor.git", rev = "e8ffcfb" }
trapframe = "0.3.0"
kernel-hal = { path = "../kernel-hal" }
naive-timer = { git = "https://github.com/rcore-os/naive-timer.git", rev="d0cfe04" }
lazy_static = { version = "1.4", features = ["spin_no_std" ] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.11"
uart_16550 = "0.2.6"
raw-cpuid = "7.0"
pc-keyboard = "0.5"
apic = { git = "https://github.com/rcore-os/apic-rs", rev = "fb86bd7" }
rcore-console = { git = "https://github.com/rcore-os/rcore-console", default-features = false, rev = "a980897b" }
acpi = "1.0.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"], rev = "c62af46" }
