[package]
name = "kernel-hal-sel4"
version = "0.1.0"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
edition = "2018"
description = "Kernel HAL implementation on seL4."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "1.2", default-features = false }
dlmalloc = { git = "https://github.com/losfair/dlmalloc-rs", branch = "rcore-soc", features = ["global", "external"] }
slab = { git = "https://github.com/losfair/slab", branch = "no-std" }
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
num_enum = { version = "0.5", default-features = false }
trapframe = "0.4"
git-version = "0.3"
woke = "0.0.2"

# copied from kernel-hal
numeric-enum-macro = "0.2"
