[package]
name = "linux-loader"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Linux programs loader and runner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
xmas-elf = "0.7"
linux-syscall = { path = "../linux-syscall" }
linux-object = { path = "../linux-object" }
zircon-object = { path = "../zircon-object" }
kernel-hal = { path = "../kernel-hal" }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }
env_logger = { version = "0.8", optional = true }
async-std = { version = "1.9", features = ["attributes"], optional = true }

[features]
default = ["std", "libos"]
libos = ["kernel-hal/libos"]
std = ["env_logger", "async-std", "rcore-fs-hostfs", "zircon-object/aspace-separate"]
graphic = ["linux-object/graphic", "kernel-hal/graphic"]
