[package]
name = "linux-syscall"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Linux syscalls implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "1.3"
numeric-enum-macro = "0.2"
static_assertions = "1.1.0"
zircon-object = { path = "../zircon-object" }
linux-object = { path = "../linux-object" }
kernel-hal = { path = "../kernel-hal", default-features = false }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitvec = { version = "0.22", default-features = false, features = ["alloc"] }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await",
] }

[dev-dependencies]
async-std = { version = "1.10", features = ["unstable"] }
