[package]
name = "zcore-loader"
version = "0.1.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
edition = "2018"
description = "Linux and Zircon user programs loader and runner."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
xmas-elf = { version = "0.7", optional = true }
kernel-hal = { path = "../kernel-hal", default-features = false }
zircon-object = { path = "../zircon-object", features = ["elf"] }
linux-object = { path = "../linux-object", optional = true }
zircon-syscall = { path = "../zircon-syscall", optional = true }
linux-syscall = { path = "../linux-syscall", optional = true }
executor = { git = "https://github.com/DeathWish5/PreemptiveScheduler", rev = "e8cd353" }

[features]
default = ["libos", "linux", "zircon"]
linux = ["linux-object", "linux-syscall"]
zircon = ["zircon-syscall", "xmas-elf"]
libos = ["kernel-hal/libos", "zircon-object/aspace-separate"]

[dev-dependencies]
env_logger = "0.9"
async-std = { version = "1.10", features = ["attributes"] }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }

[[example]]
name = "linux-libos"
required-features = ["linux", "libos"]

[[example]]
name = "zircon-libos"
required-features = ["zircon", "libos"]
