[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.1", features = ["derive"] }
dircpy = "0.3"
rand = "0.8"
lazy_static = "1.4.0"
num_cpus = "1"
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
rcore-fs-fuse = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
command-ext = { git = "https://github.com/YdrMaster/command-ext.git", rev = "52d49d5" }

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
shadow-rs = "0.11"

[target.'cfg(not(target_arch = "riscv64"))'.build-dependencies]
shadow-rs = "0.11"
