[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z-config = { path = "../z-config" }
clap = { version = "4.0", features = ["derive"] }
dircpy = "0.3"
rand = "0.8"
once_cell = "1.15.0"
num_cpus = "1"
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
rcore-fs-fuse = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b" }
os-xtask-utils = "0.0.0"

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
shadow-rs = "0.11"

[target.'cfg(not(target_arch = "riscv64"))'.build-dependencies]
shadow-rs = "0.11"
