[package]
name = "zcore"
version = "0.1.0"
authors = ["PanQL <panqinglin00@163.com>", "Yuekai Jia <equation618@gmail.com>"]
edition = "2018"
default-run = "zcore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# Disable cargo test, bench and doc for this package
name = "zcore"
test = false
bench = false
doc = false

[features]
default = ["libos"]

# Print colorless logs
colorless-log = []

# Enable graphical output
graphic = ["kernel-hal/graphic"]

# Directly link the user image to the kernel image
link-user-img = []

# For bare-metal testing, if kernel panic or the root process is finished,
# shutdown the machine and exit QEMU.
baremetal-test = []

# Run as Zircon mode
zircon = ["zcore-loader/zircon"]
# Run as Linux mode
linux = ["zcore-loader/linux", "linux-object", "rcore-fs", "rcore-fs-sfs"]

# Run as LibOS
libos = ["kernel-hal/libos", "zcore-loader/libos", "async-std", "chrono", "rcore-fs-hostfs"]
# Run on QEMU
board-qemu = []
# Run on Allwinner d1 (riscv only)
board-d1 = ["link-user-img"]

[dependencies]
log = "0.4"
spin = "0.9"
cfg-if = "1.0"
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "b3f9f51" }
kernel-hal = { path = "../kernel-hal", default-features = false, features = ["smp"] }
zcore-loader = { path = "../loader", default-features = false }
zircon-object = { path = "../zircon-object" }
linux-object = { path = "../linux-object", optional = true }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }

# LibOS mode
[target.'cfg(not(target_os = "none"))'.dependencies]
async-std = { version = "1.10", optional = true }
chrono = { version = "0.4", optional = true }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }

# Bare-metal mode
[target.'cfg(target_os = "none")'.dependencies]
buddy_system_allocator = "0.7"
executor = { git = "https://github.com/rcore-os/executor.git", rev = "85b9335" }

# Bare-metal mode on x86_64
[target.'cfg(all(target_os = "none", target_arch = "x86_64"))'.dependencies]
rboot = { git = "https://github.com/rcore-os/rboot.git", rev = "39d6e24", default-features = false }
# rvm = { git = "https://github.com/rcore-os/RVM", rev = "e91d625", optional = true }