[package]
name = "zcore"
version = "0.1.0"
authors = ["PanQL <panqinglin00@163.com>", "Yuekai Jia <equation618@gmail.com>"]
edition = "2021"
default-run = "zcore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
# Disable cargo test, bench and doc for this package
name = "zcore"
test = false
bench = false
doc = false

[features]
default = ["libos"]

# Print colorless logs
colorless-log = []

# Enable graphical output
graphic = ["kernel-hal/graphic"]

# Directly link the user image to the kernel image
link-user-img = ["kernel-hal/link-user-img"]

# For bare-metal testing, if kernel panic or the root process is finished,
# shutdown the machine and exit QEMU.
baremetal-test = ["executor/baremetal-test"]

# Run as Zircon mode
zircon = ["zcore-loader/zircon"]
# Run as Linux mode
linux = ["zcore-loader/linux", "linux-object", "rcore-fs", "rcore-fs-sfs"]

# Run as LibOS
libos = [
  "kernel-hal/libos",
  "zcore-loader/libos",
  "async-std",
  "chrono",
  "rcore-fs-hostfs",
]
# Run on QEMU
board-qemu = []
# Run on Allwinner d1 (riscv only)
board-d1 = ["link-user-img", "kernel-hal/board-d1"]

loopback = ["kernel-hal/loopback"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.9.3"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "88e871a5" }
kernel-hal = { path = "../kernel-hal", default-features = false }
zcore-loader = { path = "../loader", default-features = false }
zircon-object = { path = "../zircon-object" }
linux-object = { path = "../linux-object", optional = true }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b", optional = true }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b", optional = true }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "766fbb5" }
executor = { git = "https://github.com/DeathWish5/PreemptiveScheduler", rev = "e8cd353" }

# LibOS mode
[target.'cfg(not(target_os = "none"))'.dependencies]
async-std = { version = "1.10", optional = true }
chrono = { version = "0.4", optional = true }
rcore-fs-hostfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "1a3246b", optional = true }

# Bare-metal mode
[target.'cfg(target_os = "none")'.dependencies]
buddy_system_allocator = "0.8"

# RISC-V
[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
r0 = "1"
riscv = "0.8"
dtb-walker = "0.2.0-alpha.2"
page-table = "0.0.2"
sbi-rt = { git = "https://github.com/rustsbi/sbi-rt.git", rev = "6047ed5" }

# Bare-metal mode on x86_64
[target.'cfg(all(target_os = "none", target_arch = "x86_64"))'.dependencies]
rboot = { git = "https://github.com/YdrMaster/rboot.git", rev = "28a79ff", default-features = false }
# rvm = { git = "https://github.com/rcore-os/RVM", rev = "e91d625", optional = true }

# Bare-metal mode on aarch64
[target.'cfg(all(target_os = "none", target_arch = "aarch64"))'.dependencies]
rayboot = { git = "https://github.com/Luchangcheng2333/rayboot", rev = "b19c6c3" }
